# Distributed-Self-Service-RainGear-Terminal-System

./: .clangd  .gitignore  CMakeLists.txt  README.md  database_setup.sql  数据库连接问题解决方案.md
client/: MainWindow.cpp  MainWindow.h  SlotItem.cpp  SlotItem.h
control/: DatabaseManager.cpp  DatabaseManager.h  OperationResult.h  RainHubController.hpp
model/: GlobalDefs.h  GlobalEnum.hpp  RainGear.cpp  RainGear.h  RainGearFactory.h  RainGear_subclasses.hpp  StationUtils.cpp  StationUtils.h  Stationlocal.cpp  Stationlocal.h  User.h
scripts/: configure.ps1  deploy-complete.ps1  deploy.ps1  qt-env.ps1
